--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".RecyclerViewActivity"/>
         <activity android:name=".ViewAnimatorActivity"/>
+        <activity android:name=".ScrollActivity"/>
     </application>
 
 </manifest>
