--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".DemoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +18,9 @@
         </activity>
         <activity android:name=".RecyclerViewActivity"/>
         <activity android:name=".ViewAnimatorActivity"/>
-        <activity android:name=".ScrollActivity"/>
+        <activity android:name=".ScrollActivity"
+            android:theme="@style/AppThemeFullScreen"
+            />
     </application>
 
 </manifest>
